# atomicow

./: .gitignore  Cargo copy.toml  Cargo.toml  README.md  RELEASES.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  performance_regression.md
.github/workflows/: ci-comment-failures.yml  ci.yml  post-release.yml  release.yml  validation-jobs.yml
benches/: README.md
errors/: Cargo.toml
errors/src/: lib.rs
examples/demonstrations/: atomicow.rs
src/: lib.rs
tools/compile_fail_utils/: Cargo.toml  README.md
tools/compile_fail_utils/src/: lib.rs
tools/compile_fail_utils/tests/: example.rs
tools/compile_fail_utils/tests/example_tests/: basic_test.rs
